--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "js-401d13-class-43",
-    "slug": "js-401d13-class-43",
+    "slug": "contact-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -25,6 +25,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "3767c790-5a7a-4bd7-869b-355f0cdcb51f"
+      }
+    },
+    "owner": "triciasaw"
   }
 }
